# OrderService/docs/swagger.json
@@ -18,22 +18,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Product id",
-                        "name": "productId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Cart id",
-                        "name": "cartId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Quantity",
-                        "name": "quantity",
-                        "in": "query"
+                        "description": "Order data",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.OrderDto"
+                        }
                     }
                 ],
                 "responses": {
@@ -73,7 +64,38 @@
                 }
             }
         },
-        "/order-service/delete-order/{id}": {
+        "/order-service/delete-cart/{id}": {
+            "delete": {
+                "description": "delete cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order-service/cart"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cart ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/order-service/delete-order": {
             "delete": {
                 "description": "delete order",
                 "consumes": [
@@ -89,10 +111,39 @@
                     {
                         "type": "string",
                         "description": "Product ID",
-                        "name": "id",
-                        "in": "path",
+                        "name": "productId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cart ID",
+                        "name": "cartId",
+                        "in": "query",
                         "required": true
                     }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/order-service/get-bought-carts": {
+            "get": {
+                "description": "description of function that get bought carts to auth user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order-service/cart"
                 ],
                 "responses": {
                     "200": {
@@ -224,8 +275,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Place id",
-                        "name": "placeId",
+                        "description": "Cart id",
+                        "name": "cartId",
                         "in": "query"
                     }
                 ],
@@ -236,6 +287,22 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "types.OrderDto": {
+            "type": "object",
+            "properties": {
+                "cartId": {
+                    "type": "string"
+                },
+                "orderedProductId": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         }
